--- a/imagegallery/templates/index.html
+++ b/imagegallery/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Image gallery</title>
+    <title>Kuvagalleria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1 align="center">
-        Very nice image gallery
+        Taiteellisesti kaunis kuvagalleria
     </h1>
     <hr/>
 
@@ -15,7 +15,7 @@
         <div class="row">
     {% for results in imggal %}
     <div class="col-5" style="text-align: center;">
-    <h3 style="color:blue">{{results.imgtitle}}</h3>
+    <h3 style="color:green">{{results.imgtitle}}</h3>
 
     <img src ="{{results.image.url}}" height = "150" width = "160" 
     alt = "{{results.imgtitle}}" title ="{{results.imgtitle}}">
